--- a/Correctrly_structured_project/src/locales/lv.json
+++ b/Correctrly_structured_project/src/locales/lv.json
@@ -35,8 +35,8 @@
 	"thursday": "Ceturtdiena: 9:00 - 18:00",
 	"friday": "Piektdiena: 9:00 - 18:00",
 	"login_prompt": "Pieteikties",
-	"booking_prompt": "Rezervēt tikšanos",
-	"appointment_booking": "Tiešsaistes tikšanās rezervācija",
+	"booking_prompt": "Rezervēt remonta laiku",
+	"appointment_booking": "Tiešsaistes remontu rezervācija",
 	"booking_description": "Pieteikušies lietotāji var izmantot mūsu tiešsaistes rezervācijas sistēmu, lai izvēlētos sev piemērotāko remonta laiku",
 	"services_section_title": "Mēs piedāvājam augstākās kvalitātes auto remontus",
 	"overall_checkup_title": "Vispārējās pārbaudes",
@@ -69,7 +69,7 @@
 	"general_info": "Vispārīga informācija",
 	"car_repair_description": "Mēs piedāvājam plašu auto remonta un apkopes pakalpojumu klāstu, lai uzturētu jūsu transportlīdzekli labā stāvoklī. Mūsu eksperti ir šeit, lai palīdzētu jums ar jebkādām auto problēmām.",
 	"pricing_description": "Mēs piedāvājam visaptverošas cenas par mūsu piedāvātajiem pakalpojumiem; ja jūs zināt, kas jums nepieciešams, mēs varam uzreiz sniegt cenu aprēķinu.",
-	"visit_us": "Apmeklējiet mūs",
+	"visit_us": "Darbnīca",
 	"address_label": "Jūs varat mūs atrast šajā adresē:",
 	"address_1": "Odre, LV-3285",
 	"address_2": "Laucienes pagasts, Talsu novads",
@@ -141,16 +141,16 @@
 	"Close": "Aizvērt",
 	"Recaptcha": "Lūdzu, pabeidziet reCAPTCHA",
 	"InvalidPassword": "Nederīga parole",
-	"Appointment registered successfully": "Tikšanās veiksmīgi reģistrēta",
-	"Appointment Booking": "Tikšanās rezervācija",
-	"Choose an appointment type": "Izvēlieties tikšanās veidu",
+	"Appointment registered successfully": "Remonts veiksmīgi reģistrēta",
+	"Appointment Booking": "Remonta rezervācija",
+	"Choose an appointment type": "Izvēlieties remonta veidu",
 	"Oil change": "Eļļas maiņa",
 	"Paint job": "Krāsošanas darbs",
 	"Overall checkup or tuning": "Vispārējā pārbaude vai tūnings",
 	"Custom parts": "Pielāgotas detaļas",
 	"Project discussion": "Projekta apspriešana",
 	"Car info / Additional info": "Auto informācija / Papildu informācija",
-	"Enter a vehicle description and any other information about the appointment": "Ievadiet transportlīdzekļa aprakstu un jebkādu citu informāciju par tikšanos",
+	"Enter a vehicle description and any other information about the appointment": "Ievadiet transportlīdzekļa aprakstu un jebkādu citu informāciju par remontu",
 	"prevMonth": "Iepriekšējais mēnesis",
 	"nextMonth": "Nākamais mēnesis",
 	"daysOfWeek": "Nedēļas dienas",
@@ -162,7 +162,7 @@
 	"Special deals/offers": "Īpašie piedāvājumi",
 	"Oil change reminders": "Eļļas maiņas atgādinājumi",
 	"All notifications": "Visi paziņojumi",
-	"Appointment reminders": "Tikšanās atgādinājumi",
+	"Appointment reminders": "Remonta atgādinājumi",
 	"Remind me 1 day before": "Atgādināt 1 dienu pirms",
 	"Remind me 1 hour before": "Atgādināt 1 stundu pirms",
 	"Remind me both 1 day and 1 hour before": "Atgādināt gan 1 dienu, gan 1 stundu pirms",
@@ -290,7 +290,7 @@
     "If the project isn't yet tagged as delayed, it will be after any changes to the enddatetime.": "Ja projekts vēl nav atzīmēts kā aizkavēts, tas tiks atzīmēts pēc jebkurām izmaiņām beigu datumā.",
     "Change": "Mainīt",
     "Invalid end time": "Nederīgs beigu laiks",
-    "Your Appointments": "Jūsu tikšanās",
+    "Your Appointments": "Jūsu remonti",
     "Successfully registered worker": "Darbinieks veiksmīgi reģistrēts",
     "Successfully gave administrator permissions": "Administratora atļaujas veiksmīgi piešķirtas",
     "Users": "Lietotāji",
@@ -320,5 +320,15 @@
     "User is already a worker": "Lietotājs jau ir darbinieks",
     "Worker Type": "Darbinieka veids",
     "Administrator": "Administrators",
-    "Register worker": "Reģistrēt darbinieku"
+    "Register worker": "Reģistrēt darbinieku",
+	"User": "Lietotājs",
+    "Project": "Projekts",
+    "Start": "Sākt",
+    "No arrival": "Nav ierašanās",
+    "Finish": "Pabeigt",
+    "Completed": "Pabeigts",
+    "In Progress": "Procesā",
+    "Pending": "Gaida",
+    "No Arrival": "Nav ierašanās",
+    "Cancelled": "Atcelts"
 }
