Home page carousel finished  next step is advantages

--- a/CarRepairShop/src/locales/de.json
+++ b/CarRepairShop/src/locales/de.json
@@ -100,14 +100,13 @@
 	"front_bumper": "Vorderer Stoßfänger",
 	"select_all": "Alle auswählen",
 	"deselect_all": "Alle abwählen",
-	"estimated_price": "Geschätzter Preis: $",
 	"choose_services": "Dienstleistungen auswählen",
-	"overall_checkup_price": "Gesamtüberprüfung - $150.00",
-	"rust_removal_price": "Rostentfernung - $500.00",
-	"tuning_price": "Tuning - $1500.00",
-	"custom_part_insertion_price": "Einbau von Sonderteilen - $150.00",
-	"paint_job_price": "Lackierung - $0.00",
-	"total_price": "Geschätzter Preis: $0.00",
+	"overall_checkup_price": "Gesamtüberprüfung - €",
+	"rust_removal_price": "Rostentfernung - €",
+	"tuning_price": "Tuning - €",
+	"custom_part_insertion_price": "Einbau von Sonderteilen - €",
+	"paint_job_price": "Lackierung - €",
+	"total_price": "Geschätzter Preis: €",
 	"Successfully logged in": "Erfolgreich eingeloggt",
 	"Username or email": "Benutzername oder Email",
 	"Invalid credentials": "Ungültige Anmeldeinformationen",
@@ -185,7 +184,7 @@
 	"Front bumper": "Vorderer Stoßfänger",
 	"Select All": "Alle auswählen",
 	"Deselect All": "Alle abwählen",
-	"Estimated Price: $": "Geschätzter Preis: $",
+	"Estimated Price: €": "Geschätzter Preis: €",
 	"Choose services": "Dienstleistungen auswählen",
 	"Overall checkup service selection": "Gesamtüberprüfung Dienstleistungsauswahl",
 	"Overall Checkup": "Gesamtüberprüfung",
@@ -282,8 +281,8 @@
 	"Start Date": "Startdatum",
 	"Projected End Date": "Voraussichtliches Enddatum",
 	"Project Info": "Projektinformationen",
-	"Overall status": "Gesamtstatus",
-	"Delay Status": "Verzögerungsstatus",
+	"Overall Status": "Gesamtstatus",
+	"Delayed Status": "Verzögerungsstatus",
 	"Check Projects": "Projekte überprüfen",
 	"Choose the new end date for project: ID_": "Wählen Sie das neue Enddatum für das Projekt: ID_",
 	"!WARNING!": "!WARNUNG!",
@@ -331,5 +330,37 @@
 	"Pending": "Ausstehend",
 	"No Arrival": "Keine Ankunft",
 	"Cancelled": "Abgebrochen",
-	"Language": "Language"
+	"Language": "Sprache",
+	"To be finished today": "Heute fertigzustellen",
+	"End Date Projection": "Enddatum Projektion",
+	"Delayed status": "Verzögerungsstatus",
+	"(Click to finish project)": "(Klicken, um das Projekt abzuschließen)",
+	"Delayed projects": "Verzögerte Projekte",
+	"(Click to delay)": "(Klicken, um zu verzögern)",
+	"Active Projects": "Aktive Projekte",
+	"Project end date has changed due to delay": "Das Projektenddatum hat sich aufgrund einer Verzögerung geändert",
+	"Estimated Price: $": "Geschätzter Preis: €",
+	"Project has no delays": "Projekt hat keine Verzögerungen",
+	"User Info": "Benutzerinformationen",
+	"Overall status": "Overall status",
+	"Delay Status": "Delay Status",
+	"(Click to check all this user's appointments)": "(Klicken, um alle Termine dieses Benutzers zu überprüfen)",
+	"Users currently logged in": "Benutzer derzeit angemeldet",
+	"All Users": "Alle Benutzer",
+	"Search user by ID": "Benutzer nach ID suchen",
+	"Admin Data": "Admin-Daten",
+	"All Workers": "Alle Arbeiter",
+	"Adding a new worker": "Einen neuen Arbeiter hinzufügen",
+	"Finished Projects": "Abgeschlossene Projekte",
+	"View finished projects": "Abgeschlossene Projekte anzeigen",
+	"Search project by ID": "Search project by ID",
+	"(Click to give administrator)": "(Klicken, um Administrator zu machen)",
+	"(Click to remove administrator)": "(Klicken, um Administrator zu entfernen)",
+	"Number of Projects": "Anzahl der Projekte ",
+	"Number of Users": "Anzahl der Benutzer",
+	"Type of project": "Art des Projekts",
+	"Oil change/project discussion": "Ölwechsel/Projektbesprechung",
+	"Overall checkup/tuning": "Gesamtüberprüfung/Tuning",
+	"(Click to check all this users appointments)": "(Klicken Sie, um alle Termine dieses Benutzers zu überprüfen)",
+	"car_wash_title": "car_wash_title"
 }
