--- a/CarRepairShop/src/locales/en.json
+++ b/CarRepairShop/src/locales/en.json
@@ -100,14 +100,13 @@
 	"front_bumper": "Front bumper",
 	"select_all": "Select All",
 	"deselect_all": "Deselect All",
-	"estimated_price": "Estimated Price: $",
 	"choose_services": "Choose services",
-	"overall_checkup_price": "Overall Checkup - $150.00",
-	"rust_removal_price": "Rust Removal - $500.00",
-	"tuning_price": "Tuning - $1500.00",
-	"custom_part_insertion_price": "Custom Part Insertion - $150.00",
-	"paint_job_price": "Paint job - $0.00",
-	"total_price": "Estimated Price: $0.00",
+	"overall_checkup_price": "Overall Checkup - €",
+	"rust_removal_price": "Rust Removal - €",
+	"tuning_price": "Tuning - €",
+	"custom_part_insertion_price": "Custom Part Insertion - €",
+	"paint_job_price": "Paint job - €",
+	"total_price": "Full Estimated Price: €",
 	"Successfully logged in": "Successfully logged in",
 	"Username or email": "Username or email",
 	"Invalid credentials": "Invalid credentials",
@@ -185,7 +184,7 @@
 	"Front bumper": "Front bumper",
 	"Select All": "Select All",
 	"Deselect All": "Deselect All",
-	"Estimated Price: $": "Estimated Price: $",
+	"Estimated Price: €": "Estimated Price: €",
 	"Choose services": "Choose services",
 	"Overall checkup service selection": "Overall checkup service selection",
 	"Overall Checkup": "Overall Checkup",
@@ -331,5 +330,37 @@
 	"Pending": "Pending",
 	"No Arrival": "No Arrival",
 	"Cancelled": "Cancelled",
-	"Language": "Language"
+	"Language": "Language",
+	"To be finished today": "To be finished today",
+	"Active Projects": "Active projects",
+	"End Date Projection": "End date projection",
+	"Delayed Status": "Delayed status",
+	"(Click to finish project)": "(Click to finish project)",
+	"Delayed Projects": "Delayed projects",
+	"(Click to delay)": "(Click to delay)",
+	"Project end date has changed due to delay": "Project end date has changed due to delay",
+	"Estimated Price: $": "Estimated Price: $",
+	"Project has no delays": "Project has no delays",
+	"User Info": "Lietotāja info",
+	"(Click to check all this user's appointments)": "(Click to check all this user's appointments)",
+	"(Click to check all this users appointments)": "(Click to check all this users appointments)",
+	"Users currently logged in": "Users currently logged in",
+	"All Users": "All users",
+	"Search user by ID": "Search user by ID",
+	"Admin Data": "Admin Data",
+	"All Workers": "All worksers",
+	"Adding a new worker": "Adding a new worker",
+	"Finished Projects": "Finished projects",
+	"View finished projects": "View finished projects",
+	"Search project by ID": "Search project by ID",
+	"(Click to give administrator)": "(Click to give administrator)",
+	"(Click to remove administrator)": "(Click to remove administrator)",
+	"Number of Projects": "Number of Projects",
+	"Number of Users": "Number of Users",
+	"Projektu skaits": "Projektu skaits",
+	"Lietotāju skaits": "Lietotāju skaits",
+	"Type of project": "Type of project",
+	"Oil change/project discussion": "Oil change/project discussion",
+	"Overall checkup/tuning": "Overall checkup/tuning",
+	"car_wash_title": "car_wash_title"
 }
