--- a/CarRepairShop/src/locales/lv.json
+++ b/CarRepairShop/src/locales/lv.json
@@ -100,14 +100,14 @@
 	"front_bumper": "Priekšējais buferis",
 	"select_all": "Izvēlēties visu",
 	"deselect_all": "Noņemt visu izvēli",
-	"estimated_price": "Paredzamā cena: $",
+	"estimated_price": "Paredzamā cena: €",
 	"choose_services": "Izvēlieties pakalpojumus",
-	"overall_checkup_price": "Vispārējā pārbaude - $150.00",
-	"rust_removal_price": "Rūsas noņemšana - $500.00",
-	"tuning_price": "Tūnings - $1500.00",
-	"custom_part_insertion_price": "Pielāgotu detaļu ievietošana - $150.00",
-	"paint_job_price": "Krāsošanas darbs - $0.00",
-	"total_price": "Paredzamā cena: $0.00",
+	"overall_checkup_price": "Vispārējā pārbaude - €",
+	"rust_removal_price": "Rūsas noņemšana - €",
+	"tuning_price": "Tūnings - €",
+	"custom_part_insertion_price": "Pielāgotu detaļu ievietošana - €",
+	"paint_job_price": "Krāsošanas darbs - €",
+	"total_price": "Paredzamā cena: €",
 	"Successfully logged in": "Veiksmīgi pieteicies",
 	"Username or email": "Lietotājvārds vai e-pasts",
 	"Invalid credentials": "Nederīgi akreditācijas dati",
@@ -185,7 +185,6 @@
 	"Front bumper": "Priekšējais buferis",
 	"Select All": "Izvēlēties visu",
 	"Deselect All": "Noņemt visu izvēli",
-	"Estimated Price: $": "Paredzamā cena: $",
 	"Choose services": "Izvēlieties pakalpojumus",
 	"Overall checkup service selection": "Vispārējās pārbaudes pakalpojuma izvēle",
 	"Overall Checkup": "Vispārējā pārbaude",
@@ -282,7 +281,7 @@
 	"Start Date": "Sākuma datums",
 	"Projected End Date": "Plānotais beigu datums",
 	"Project Info": "Projekta informācija",
-	"Overall status": "Kopējais statuss",
+	"Overall Status": "Vispārīgais statuss",
 	"Delay Status": "Kavēšanās statuss",
 	"Check Projects": "Pārbaudīt projektus",
 	"Choose the new end date for project: ID_": "Izvēlieties jauno beigu datumu projektam: ID_",
@@ -324,12 +323,43 @@
 	"User": "Lietotājs",
 	"Project": "Projekts",
 	"Start": "Sākt",
-	"No arrival": "Nav ierašanās",
+	"No arrival": "Neieradās",
 	"Finish": "Pabeigt",
 	"Completed": "Pabeigts",
 	"In Progress": "Procesā",
 	"Pending": "Gaida",
-	"No Arrival": "Nav ierašanās",
+	"No Arrival": "Neieradās",
 	"Cancelled": "Atcelts",
-	"Language": "Language"
+	"Language": "Valoda",
+	"To be finished today": "Šodien jāpabeidz",
+	"Active Projects": "Aktīvie projekti",
+	"End Date Projection": "Plānotais beigu datums",
+	"Delayed Status": "Vai kavēts",
+	"(Click to finish project)": "(Uzspiest lai pabeigtu)",
+	"Delayed Projects": "Kavētie projekti",
+	"(Click to delay)": "(Uzpiest, lai mainītu beigu datumu)",
+	"Overall status": "Overall status",
+	"Project end date has changed due to delay": "Projekta beiga laiks mainijies, kavējumu dēļ",
+	"Estimated Price: $": "Aptuvenā cena: $",
+	"Project has no delays": "Projektam nav kavējuma",
+	"User Info": "Lietotāja info",
+	"(Click to check all this user's appointments)": "(Uzspied, lai pārbaudītu visus šī lietotāja remontus)",
+	"Users currently logged in": "Lietotāji, kas pašlaik ir ielogoti",
+	"All Users": "Visi lietotāji",
+	"Search user by ID": "Meklēt lietotāju pēc ID",
+	"Admin Data": "Administratora dati",
+	"All Workers": "Visi darbinieki",
+	"Adding a new worker": "Jauna darbinieka pievienošana",
+	"Finished Projects": "Pabeigtie projekti",
+	"View finished projects": "Skatīt pabeigtos projektus",
+	"Search project by ID": "Search project by ID",
+	"(Click to give administrator)": "(Uzspiediet, lai piešķirtu administratora tiesības)",
+	"(Click to remove administrator)": "(Uzspiediet, lai noņemtu administratora tiesības)",
+	"Number of Projects": "Projektu skaits",
+	"Number of Users": "Lietotāju skaits",
+	"Type of project": "Projekta veids",
+	"Oil change/project discussion": "Eļļas maiņa/projekta apspriešana",
+	"Overall checkup/tuning": "Vispārējā pārbaude/tūnings",
+	"(Click to check all this users appointments) ": "(Noklikšķiniet, lai pārbaudītu visus šī lietotāja pierakstus)",
+	"car_wash_title": "car_wash_title"
 }
