Changed every regular users page to be better, last one is services page where im not sure how and what to show exactly, also will need to update translations

--- a/CarRepairShop/src/locales/de.json
+++ b/CarRepairShop/src/locales/de.json
@@ -362,5 +362,7 @@
 	"Oil change/project discussion": "Ölwechsel/Projektbesprechung",
 	"Overall checkup/tuning": "Gesamtüberprüfung/Tuning",
 	"(Click to check all this users appointments)": "(Klicken Sie, um alle Termine dieses Benutzers zu überprüfen)",
-	"car_wash_title": "car_wash_title"
+	"car_wash_title": "car_wash_title",
+	"Passwords don't match": "Passwords don't match",
+	"Edit": "Edit"
 }
