--- a/CarRepairShop/src/locales/lv.json
+++ b/CarRepairShop/src/locales/lv.json
@@ -361,5 +361,7 @@
 	"Oil change/project discussion": "Eļļas maiņa/projekta apspriešana",
 	"Overall checkup/tuning": "Vispārējā pārbaude/tūnings",
 	"(Click to check all this users appointments) ": "(Noklikšķiniet, lai pārbaudītu visus šī lietotāja pierakstus)",
-	"car_wash_title": "car_wash_title"
+	"car_wash_title": "car_wash_title",
+	"Passwords don't match": "Passwords don't match",
+	"Edit": "Edit"
 }
