Bunch of changes, working on fixing the admin page to not be horrid

--- a/CarRepairShop/src/locales/de.json
+++ b/CarRepairShop/src/locales/de.json
@@ -473,5 +473,35 @@
 	"Reset Password": "Reset Password",
 	"Enter your email": "Enter your email",
 	"Invalid email address": "Invalid email address",
-	"Send Reset Link": "Send Reset Link"
+	"Send Reset Link": "Send Reset Link",
+	"Admin Panel": "Admin Panel",
+	"Filter": "Filter",
+	"All": "All",
+	"Active": "Active",
+	"With Projects": "With Projects",
+	"Admins": "Admins",
+	"Workers": "Workers",
+	"Search by ID, Email, or Project ID": "Search by ID, Email, or Project ID",
+	"Add Worker": "Add Worker",
+	"All Projects": "All Projects",
+	"Delayed": "Delayed",
+	"Finished": "Finished",
+	"Search by Project ID, User ID, Status": "Search by Project ID, User ID, Status",
+	"Projects by Date": "Projects by Date",
+	"Started on this day": "Started on this day",
+	"Finished on this day": "Finished on this day",
+	"Search by Date": "Search by Date",
+	"Search by Project ID, User ID, Username, Status": "Search by Project ID, User ID, Username, Status",
+	"View All Users": "View All Users",
+	"Filter: All Users": "Filter: All Users",
+	"Active Users": "Active Users",
+	"Users With Projects": "Users With Projects",
+	"Search Users": "Search Users",
+	"View All Projects": "View All Projects",
+	"Filter: All Projects": "Filter: All Projects",
+	"Search by Project ID, User ID, Username, or Status": "Search by Project ID, User ID, Username, or Status",
+	"Search Projects": "Search Projects",
+	"Search by ID, Email, or ProjectID": "Search by ID, Email, or ProjectID",
+	"Search by Email, ID or ProjectID": "Search by Email, ID or ProjectID",
+	"Search by ID, Username, or Info": "Search by ID, Username, or Info"
 }
