New layout for admin panel, left to do is fix all the fetches remove ones not needed and stop using app.js for functions that are used just in one js file anyways

--- a/CarRepairShop/src/locales/de.json
+++ b/CarRepairShop/src/locales/de.json
@@ -503,5 +503,8 @@
 	"Search Projects": "Search Projects",
 	"Search by ID, Email, or ProjectID": "Search by ID, Email, or ProjectID",
 	"Search by Email, ID or ProjectID": "Search by Email, ID or ProjectID",
-	"Search by ID, Username, or Info": "Search by ID, Username, or Info"
+	"Search by ID, Username, or Info": "Search by ID, Username, or Info",
+	"Completed Projects": "Completed Projects",
+	"Pending Projects": "Pending Projects",
+	"Cancelled Projects": "Cancelled Projects"
 }
